fix: change boot query to get and fix dark mode

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -250,7 +250,8 @@ body {
 
 html,
 html.light .invert,
-html .invert .invert {
+html .invert .invert,
+#daily-companion-wrapper{
   @mixin dark-mode;
 }
 
